# Portfolio-Optimizer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh
inc/: auto_diff.hpp  bayes_optimizer.hpp  libcurl.hpp  market_data.hpp
prototype/: requirements.txt  test.py  test_GP.py  test_algo.py
src/: auto_diff.cpp  autodiff.cpp  bayes_optimizer.cpp  market_data.cpp  run_simulation.cpp
